# google-docstring-parser

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.cursor/rules/: custom-rule.mdc
.github/: FUNDING.yml
.github/workflows/: ci.yml  upload_to_pypi.yml
google_docstring_parser/: __init__.py  docstring_parser.py  google_docstring_parser.py  parser.py  type_validation.py
tests/: test_brackets_validation.py  test_parser.py  test_references.py  test_type_validation.py  test_type_validation_edge_cases.py
tests/test_docstring_checker/: test_check_docstrings.py  test_docstring_validation.py  test_example_files.py  test_malformed_docstrings.py  test_valid_docstrings.py
tools/: README.md  __init__.py  check_docstrings.py
